--- a/css/style.css
+++ b/css/style.css
@@ -21,5 +21,5 @@ body {
     background-size: auto auto;
     background-attachment: fixed;
     background-repeat: repeat;
-    background-image: url("css/background.jpg");
+    background-image: url("../img/background.jpg");
 }
